Improved scaling the layout for smaller screens

--- a/styles.css
+++ b/styles.css
@@ -59,14 +59,16 @@ header {
   background: linear-gradient(245deg, #4d9559 0%, #38703d 29%, #133917 75%);
   position: relative;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 1fr 2fr;
   align-items: center;
   gap: 2rem;
   padding-left: 20%;
 }
+.hero .hero-img img {
+  width: 100%;
+}
 .hero .hero-text {
   color: #fff;
-  width: 70%;
 }
 .hero .hero-text h5 {
   font-size: 14px;
@@ -197,6 +199,7 @@ header {
   }
   .hero .hero-text {
     padding-top: 115px;
+    width: 70%;
   }
   .hero .hero-img {
     text-align: center;
