--- a/styles.css
+++ b/styles.css
@@ -91,7 +91,7 @@ header {
   line-height: 1.9;
   margin-bottom: 40px;
 }
-.hero .hero-text a {
+.hero .hero-buttons a {
   display: inline-block;
   background: #4d9559;
   border: 1px solid transparent;
@@ -104,18 +104,18 @@ header {
   color: #fff;
   text-decoration: none;
 }
-.hero .hero-text a:hover {
+.hero .hero-buttons a:hover {
   background: transparent;
   border: 1px solid #fff;
   transform: translateX(8px);
   transition: all 500ms ease;
 }
-.hero .hero-text a.ctaa {
+.hero .hero-buttons a.ctaa {
   background: transparent;
   border: 1px solid #fff;
   margin-left: 20px;
 }
-.hero .hero-text a.ctaa i {
+.hero .hero-buttons a.ctaa i {
   vertical-align: middle;
   margin-right: 5px;
 }
@@ -177,16 +177,16 @@ header {
   }
 }
 @media (max-width: 1340px) {
-  .hero .hero-img img {
-    width: 100%;
-    height: auto;
-  }
-  .hero-text h1 {
+  .hero .hero-text h1 {
     font-size: 75px;
     margin: 0 0 30px;
   }
-  .hero-text h5 {
+  .hero .hero-text h5 {
     margin-bottom: 25px;
+  }
+  .hero .hero-img img {
+    width: 100%;
+    height: auto;
   }
 }
 @media (max-width: 1195px) {
@@ -224,7 +224,6 @@ header {
     top: 100%;
     right: -100%;
     width: 300px;
-    height: 40vh;
     background: #4d9559;
     display: flex;
     flex-direction: column;
@@ -238,6 +237,9 @@ header {
   }
   .navlist.open {
     right: 0;
+  }
+  .hero .hero-text {
+    width: 100%;
   }
 }
 @media (max-width: 680px) {
